--- a/sass/style.css
+++ b/sass/style.css
@@ -377,11 +377,15 @@ img {
   margin-bottom: 30px;
 }
 .description__button-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
   color: #FFF;
-  font-size: 16px;
+  font-size: 17px;
   border-radius: 25px;
   box-shadow: 0px 6px 8px 0px grey;
-  padding: 15px 25px 15px 25px;
+  padding: 18px 25px 18px 25px;
   background: linear-gradient(-5deg, #9356DC 2%, #b35cdc, #cf64dc, #e86edb, #ff79da);
 }
 .description__button-menu:hover {
@@ -678,6 +682,9 @@ img {
     width: 90%;
   }
 }
+.menu__card--choix:hover h4 {
+  width: 60%;
+}
 .menu__card--choix:hover .menu__card--choix--descriptif--valid {
   opacity: 1;
   transform: translate(-3rem);
@@ -759,14 +766,18 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px 106px 30px 106px;
+  margin: 30px 0px 30px 0px;
 }
 .menu__button--commander {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
   color: #FFF;
-  font-size: 16px;
+  font-size: 17px;
   border-radius: 25px;
   box-shadow: 0px 6px 8px 0px grey;
-  padding: 15px 25px 15px 25px;
+  padding: 18px 25px 18px 25px;
   background: linear-gradient(-5deg, #9356DC 2%, #b35cdc, #cf64dc, #e86edb, #ff79da);
 }
 .menu__button--commander:hover {
