--- a/sass/style.css
+++ b/sass/style.css
@@ -115,7 +115,7 @@ body {
   margin: 0;
 }
 
-#bloc-page {
+#Bloc-page {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
@@ -380,12 +380,12 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
+  width: 220px;
   color: #FFF;
-  font-size: 17px;
+  font-size: 16px;
   border-radius: 25px;
   box-shadow: 0px 6px 8px 0px grey;
-  padding: 18px 25px 18px 25px;
+  padding: 17px;
   background: linear-gradient(-5deg, #9356DC 2%, #b35cdc, #cf64dc, #e86edb, #ff79da);
 }
 .description__button-menu:hover {
@@ -394,6 +394,13 @@ img {
 }
 
 /* Fonctionnement */
+@media screen and (min-width: 992px) {
+  .fonctionnement {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
 .fonctionnement h2 {
   width: 100%;
   display: flex;
@@ -406,8 +413,10 @@ img {
     margin-left: 0px;
   }
   .fonctionnement__selectionall {
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    margin: 10px 15px 10px 15px;
   }
 }
 .fonctionnement__selection {
@@ -454,8 +463,28 @@ img {
     width: 95%;
   }
 }
+@media screen and (min-width: 992px) {
+  .fonctionnement__selection {
+    width: 25%;
+  }
+}
 
 /* Restaurant */
+.main {
+  width: 100%;
+  height: 1300px;
+}
+@media screen and (min-width: 768px) {
+  .main {
+    height: 640px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .main {
+    height: 765px;
+  }
+}
+
 .restaurants {
   width: 100%;
   height: 100%;
@@ -474,7 +503,7 @@ img {
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  margin-left: 14px;
+  margin-left: 19px;
 }
 @media screen and (min-width: 992px) {
   .restaurants h2 {
@@ -484,7 +513,7 @@ img {
 }
 .restaurants__cards {
   width: 100%;
-  height: 70%;
+  height: 95%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -504,8 +533,8 @@ img {
   }
 }
 .restaurants__cards a {
-  width: 94%;
-  height: 225px;
+  width: 90%;
+  height: 265px;
 }
 @media screen and (min-width: 768px) {
   .restaurants__cards a {
@@ -522,10 +551,11 @@ img {
   border-radius: 15px;
   background-color: #FFF;
   box-shadow: 8px 5px 10px 5px #f0f2f6;
+  height: 100%;
 }
 .restaurants__card--image {
   position: relative;
-  height: 145px;
+  height: 72%;
   border-radius: 15px 15px 0px 0px;
 }
 .restaurants__card--image img {
@@ -559,7 +589,7 @@ img {
   flex-direction: column;
   width: 90%;
   height: 10%;
-  margin: 8px;
+  margin: 8px 12px 8px 12px;
   font-size: 16px;
   line-height: 24px;
 }
@@ -574,7 +604,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15%;
+  width: 18%;
   height: 60px;
 }
 .restaurants__card--descriptif--heart .fa-heart {
@@ -772,12 +802,12 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
+  width: 220px;
   color: #FFF;
-  font-size: 17px;
+  font-size: 16px;
   border-radius: 25px;
   box-shadow: 0px 6px 8px 0px grey;
-  padding: 18px 25px 18px 25px;
+  padding: 17px;
   background: linear-gradient(-5deg, #9356DC 2%, #b35cdc, #cf64dc, #e86edb, #ff79da);
 }
 .menu__button--commander:hover {
